--- a/html/www-bbox/en/terms-and-conditions/index.html
+++ b/html/www-bbox/en/terms-and-conditions/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>WBOSS - Terms and conditions</title>
+    <title>FBAInspection - Terms and conditions</title>
     <meta property="og:image" content="../../../static/img/logo-en-maior.png"/>
     <meta name="description" content="Prepship Tool. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
     <meta property="og:title" content="Prepship Tool"/>
@@ -61,7 +61,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="/en-us/"><img src="/static/img/logo-en.png" /></a>
+                <a class="navbar-brand page-scroll" href="/en-us/"><img src="../../../static/img/logo-en.png" /></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -100,25 +100,25 @@
                         <p>
                             The terms below are intended to clarify our policies and to help our users understand the general conditions of use of our platform, as well as the rights and obligations of both parties.</p>
                         <p>
-                            These General Terms and Conditions apply to the use of the services offered by the WBOSS.</p>
+                            These General Terms and Conditions apply to the use of the services offered by the FBAInspection.</p>
                         <p>
-                            Any person hereinafter referred to as the User, who intends to use the WBOSS services shall accept the General Terms and Conditions and all other policies and principles governing it.</p>
+                            Any person hereinafter referred to as the User, who intends to use the FBAInspection services shall accept the General Terms and Conditions and all other policies and principles governing it.</p>
                         <p>
-                            Acceptance of these General Terms and Conditions is absolutely indispensable for the use of the Sites and services provided by the WBOSS.</p>
+                            Acceptance of these General Terms and Conditions is absolutely indispensable for the use of the Sites and services provided by the FBAInspection.</p>
                         <p>
                             The User must read, make sure to understand and accept all the conditions established in the General Terms and Conditions, as well as in the other documents incorporated by reference, before registering as a User of the site.</p>
                         <p>&nbsp;</p>
                         <p>
                             <strong>1- Object</strong></p>
                         <p>
-                            The services covered by these general terms and conditions consist of (i) receiving and lodge products sent by duly registered users. (ii) The WBOSS provides a delivery service to send the same products to the destination declared by the user.</p>
+                            The services covered by these general terms and conditions consist of (i) receiving and lodge products sent by duly registered users. (ii) The FBAInspection provides a delivery service to send the same products to the destination declared by the user.</p>
                         <p>&nbsp;</p>
                         <p>
                             <strong>2- Ability to register</strong></p>
                         <p>
-                            The WBOSS services are only available to individuals or legal entities that have the legal capacity to hire them.</p>
+                            The FBAInspection services are only available to individuals or legal entities that have the legal capacity to hire them.</p>
                         <p>
-                            It is forbidden to register users who do not have civil capacity (in relation to individuals entities) or are not legal representatives (with respect to legal entities), as well as users who have been suspended from the WBOSS, temporarily or definitively, without prejudice to the application of the legal sanctions.</p>
+                            It is forbidden to register users who do not have civil capacity (in relation to individuals entities) or are not legal representatives (with respect to legal entities), as well as users who have been suspended from the FBAInspection, temporarily or definitively, without prejudice to the application of the legal sanctions.</p>
                         <p>
                             &nbsp;</p>
                         <p>
@@ -126,7 +126,7 @@
                         <p>
                             Only the user that completes all the mandatory fields of the registration form with accurate, precise and true information will be confirmed as registered. The user declares and accepts the commitment to update the data entered in the registration form whenever it is necessary.</p>
                         <p>
-                            The WBOSS reserves the right to refuse any registration request and to suspend a previously accepted registration, which is in disagreement with the policies and rules of the present General Terms and Conditions.</p>
+                            The FBAInspection reserves the right to refuse any registration request and to suspend a previously accepted registration, which is in disagreement with the policies and rules of the present General Terms and Conditions.</p>
                         <p>
                             The user commits to notify the Prep Ship Toolimmediately, and in a safe manner, of any unauthorized use of his account, as well as unauthorized access by third parties. The user will be solely responsible for the operations performed on his account since access will only be possible by entering the password, which should be of the user&#39;s exclusive knowledge and property.</p>
                         <p>
@@ -134,79 +134,54 @@
                         <p>
                             <strong>4- Alteration of the General Terms and Conditions</strong></p>
                         <p>
-                            The WBOSS may change, at any time, these General Terms and Conditions, aiming at its improvement and improvement of the services provided. The changes will not take effect in relation to operations already started before their publication, in which case the previous edition remains in force.</p>
+                            The FBAInspection may change, at any time, these General Terms and Conditions, aiming at its improvement and improvement of the services provided. The changes will not take effect in relation to operations already started before their publication, in which case the previous edition remains in force.</p>
                         <p>
                             <br />
-                            <strong>5- Products sent to WBOSS</strong></p>
+                            <strong>5- Products sent to FBAInspection</strong></p>
                         <p>
-                            Users of the site will be able to send their products, without quantity limit, so that their inventory is formed in the WBOSS.</p>
+                            Users of the site will be able to send their products, without quantity limit, so that their inventory is formed in the FBAInspection.</p>
                         <p>
-                            Users must complete all the information about the products registered and are responsible for their veracity. All products received by the WBOSS will be verified and in case of divergence in the information provided by the user, the WBOSS reserves the right to modify them. If it is necessary to modify the information, the user should be notified.</p>
+                            Users must complete all the information about the products registered and are responsible for their veracity. All products received by the FBAInspection will be verified and in case of divergence in the information provided by the user, the FBAInspection reserves the right to modify them. If it is necessary to modify the information, the user should be notified.</p>
                         <p>&nbsp;</p>
                         <p>
                             <strong>6- Shipment of the products to the destinations declared by the user</strong></p>
                         <p>
-                            It is the responsibility of the users to fill in the delivery forms correctly. Users should fill in the products that will make up the delivered, write down their destination correctly, upload the necessary documents and make the payment. The WBOSS Team is responsible for verifying, packaging, filling the shipping information correctly and shipment of the products.</p>
+                            It is the responsibility of the users to fill in the delivery forms correctly. Users should fill in the products that will make up the delivered, write down their destination correctly, upload the necessary documents and make the payment. The FBAInspection Team is responsible for verifying, packaging, filling the shipping information correctly and shipment of the products.</p>
                         <p>&nbsp;</p>
                         <p>
                             <strong>7- Payment Processing</strong></p>
                         <p>
-                            Payments are all made by Paypal. The WBOSS has no other type of payment. If the user tries to make payment using another service other than Paypal through the platform, the WBOSS reserves the right not to acknowledge the payment. The user declares and acknowledges that payment processing depends on compliance with certain procedures defined by the policies and terms used by Paypal. The WBOSS is not responsible for problems occurred in the processing of payment by Paypal.</p>
+                            Payments are all made by Paypal. The FBAInspection has no other type of payment. If the user tries to make payment using another service other than Paypal through the platform, the FBAInspection reserves the right not to acknowledge the payment. The user declares and acknowledges that payment processing depends on compliance with certain procedures defined by the policies and terms used by Paypal. The FBAInspection is not responsible for problems occurred in the processing of payment by Paypal.</p>
                         <p>&nbsp;</p>
                         <p>
                             <strong>8- Information Privacy</strong></p>
                         <p>
-                            All User information or Personal Data is stored on servers or high-security magnetic media. Except with respect to the information that is posted on the Sites, the WBOSS will take all reasonable steps to maintain the confidentiality and security of the confidential information.</p>
+                            All User information or Personal Data is stored on servers or high-security magnetic media. Except with respect to the information that is posted on the Sites, the FBAInspection will take all reasonable steps to maintain the confidentiality and security of the confidential information.</p>
                         <p>
-                            The User expressly authorizes that his information and personal data is shared by the WBOSS Team with the other integral companies that are part of the economic group, commercial partners, members of the Program of Protection of Intellectual Property, authorities and individuals or legal entities who claim to have been injured by Users</p>
+                            The User expressly authorizes that his information and personal data is shared by the FBAInspection Team with the other integral companies that are part of the economic group, commercial partners, members of the Program of Protection of Intellectual Property, authorities and individuals or legal entities who claim to have been injured by Users</p>
 
                         <p>
                             &nbsp;</p>
                         <p>
                             <strong>9- Penalties</strong></p>
                         <p>
-                            Without prejudice to other applicable measures, the WBOSS may warn, suspend, temporarily or definitively, the account of a User, at any time, initiating legal actions and/or suspending the provision of its services if: a) the User does not comply with any provisions of these Terms and Conditions of use and other policies of the WBOSS; b) disobeys with his duties as a User; c) if he practices fraudulent or malicious acts; d) if the identity of the User cannot be verified or if any information provided by the User is incorrect; e) if the WBOSS verifies that products in its stock do not comply with legality. In the cases of suspension of the user account, all products contained in the user&#39;s stock will be automatically canceled and will be returned to the same. If it does not indicate the place to be returned, the products will be considered abandoned.</p>
+                            Without prejudice to other applicable measures, the FBAInspection may warn, suspend, temporarily or definitively, the account of a User, at any time, initiating legal actions and/or suspending the provision of its services if: a) the User does not comply with any provisions of these Terms and Conditions of use and other policies of the FBAInspection; b) disobeys with his duties as a User; c) if he practices fraudulent or malicious acts; d) if the identity of the User cannot be verified or if any information provided by the User is incorrect; e) if the FBAInspection verifies that products in its stock do not comply with legality. In the cases of suspension of the user account, all products contained in the user&#39;s stock will be automatically canceled and will be returned to the same. If it does not indicate the place to be returned, the products will be considered abandoned.</p>
                         <p>
-                            The WBOSS reserves the right at any time and in its sole discretion to request the user to send personal documentation and/or products. Failure to comply may result in the exclusion of the user and its products.</p>
+                            The FBAInspection reserves the right at any time and in its sole discretion to request the user to send personal documentation and/or products. Failure to comply may result in the exclusion of the user and its products.</p>
                         <p>
                             <br />
                             <strong>10- Responsibilities</strong></p>
                         <p>
-                            The WBOSS is responsible for any damages caused to its user&#39;s products for defects or defects relating exclusively to the provision of its hosting, storage and shipping service.</p>
+                            The FBAInspection is responsible for any damages caused to its user&#39;s products for defects or defects relating exclusively to the provision of its hosting, storage and shipping service.</p>
                         <p>&nbsp;</p>
                         <p>
                             &nbsp;<strong>11- System failures</strong></p>
                         <p>
-                            The WBOSS is not responsible for any damage, prejudice or loss suffered by the User due to failures in the internet, the system or the server used by the user, arising from third-party conduct, fortuitous event or force majeure. The WBOSS will not be responsible for any virus that may attack your equipment due to access, use or navigation on the Internet or as a consequence of the transfer of data, files, images, texts, videos or audio.</p>
+                            The FBAInspection is not responsible for any damage, prejudice or loss suffered by the User due to failures in the internet, the system or the server used by the user, arising from third-party conduct, fortuitous event or force majeure. The FBAInspection will not be responsible for any virus that may attack your equipment due to access, use or navigation on the Internet or as a consequence of the transfer of data, files, images, texts, videos or audio.</p>
                         <p>&nbsp;</p>
-                        <p>
-                            &nbsp;<strong>12- Tariffs and Billing</strong></p>
-                        <p>
-                            The WBOSS does not charge for registering and storing products on your server and physical location. The charges are made on each shipment, per product and according to the period of storage of the product with the WBOSS.</p>
-                        <p>
-                            The following is the price list:</p>
 
                         <p>
-                            <i class="fa fa-check-square-o"></i> Product in stock on the WBOSS up to 45 days: USD 1.49 per product</p>
-                        <p>
-                            <i class="fa fa-check-square-o"></i> Product in stock on the WBOSS from 46 to 75 days: USD 1.79 per product</p>
-                        <p>
-                            <i class="fa fa-check-square-o"></i> Product in stock on the WBOSS from 76 to 90 days: USD 1.99 per product</p>
-                        <p>&nbsp;</p>
-                        <p>
-                            From day 91, it will be added USD 0.25 per month per item stored.</p>
-
-                        <p>
-                            Products for a particular shipment must have their status as &quot;In Stock on the WBOSS&quot; during all stages. From the registration of the shipment until its finalization..</p>
-
-                        <p>&nbsp;</p>
-                        <p>
-                            <strong>13 - Support and live chat</strong></p>
-                        <p>
-                            The platform support, through chat on the platform itself, is solely and exclusively intended for clarification and guidance regarding platform-related features. The quoted channels do not support issues related to operations on other platforms, such as Amazon, Ebay or otherwise. We do not support doubts such as: Manage your store on Amazon or another platform, Sale of products, or any other type of question related to another platform that is not the WBOSS.</p>
-                        <p>&nbsp;</p>
-                        <p>
-                            <strong>14- Discrepancies of information</strong></p>
+                            <strong>12- Discrepancies of information</strong></p>
                         <p>
                             It is the sole responsibility of the user of the platform to guarantee the ability to sell each product sent, checking any restrictions and making sure that the product is listed in the correct ad. We are not responsible for product information that has been entered with misleading information by the user.</p>
                         <p>
