ajuste de um typo

--- a/html/www-bbox/en/help/index.html
+++ b/html/www-bbox/en/help/index.html
@@ -104,7 +104,7 @@
                     </ul>
                     <div class="tab-content">
                         <div id="cadastro" class="tab-pane active">
-                            <p>Very simple. To register to the platform, click on the link <a href="https://fbainspection.prepshiptool.com/en/user/registration/" class="download">hhttps://fbainspection.prepshiptool.com/en/user/registration/</a>, fill in the blanks and accept the terms and conditions and in less than a minute you’ll become a registered user.</p>
+                            <p>Very simple. To register to the platform, click on the link <a href="https://fbainspection.prepshiptool.com/en/user/registration/" class="download">https://fbainspection.prepshiptool.com/en/user/registration/</a>, fill in the blanks and accept the terms and conditions and in less than a minute you’ll become a registered user.</p>
                             <br>
                             <img src="../../../static/img/print-cad-en.png" class="img-ajuda-center"/><br><br>
                             <!--<p>Após o cadastro, você receberá um email de confirmação.</p>-->
