Ajustes de tela na logo, footer e menu

--- a/html/www/index.html
+++ b/html/www/index.html
@@ -263,6 +263,14 @@
                     </div>
                 </div>
 
+                <div class="heading">
+                    <div class="title text-center arrow-left">
+                        <img class="hidden-xs" src="../static/img/right-arrow.png" alt="" />
+
+                        <h4 class="">Mais...</h4>
+                    </div>
+                </div>
+
                 <div class="feature-wrapper">
                     <div class="row">
 
