descrição nos detalhes:
- ajuste de css para barra de etapa do envio quando a mesma não tiver
etapa de pagamento;
- não permitir que o usuário altere a quantidade de produtos enviados;
- adição de mensagem de erro próximo do botão salvar e etc para que o
usuário saiba que existem erros acima;
- validação de seleção de serviço ao pular a etapa 1;
- lógica para apresentação do preço de envio ou não se o envio tiver ou
não etapa de pagamento, a lógica se um envio possui ou não etapa de pgto
é se existe ou não serviço cobrado selecionado;
- apresentação do tempo em estoque no grid de produtos do envio, para
que o administrador possa tomar uma melhor decisão se cobra ou não
alguma multa por tempo em estoque;
- troca do label dos botões avançar status e voltar status para pular
etapa e voltar etapa;
- troca do título da modal de seleção de serviços para melhor
entendimento, de serviços utilizados para preparação para composição do
preço de redirecionamento;
- página de termos não mais estática e sim servida pelo servidor de
aplicações;

--- a/html/www/fale-conosco/index.html
+++ b/html/www/fale-conosco/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>PrepShip Tool - Fale conosco</title>
+        <title>VOI Services - Fale conosco</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -158,7 +158,7 @@
                             <a target="_blank" href="https://www.youtube.com/channel/UCVlImX_R6duPL-JGnSoUucQ/videos"><i class="fa fa-youtube"></i></a>
                         </div>
 
-                        <p>Copyright © PrepShip Tool 2017.</p>
+                        <p>Copyright © VOI Services 2018.</p>
                     </div>
 
                 </div>
