ajuste do titulo da página.

--- a/html/www-bbox/en/terms-and-conditions/index.html
+++ b/html/www-bbox/en/terms-and-conditions/index.html
@@ -9,12 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Prepship Tool - Terms and conditions</title>
+    <title>VOI Services - Terms and conditions</title>
     <meta property="og:image" content="../../../static/img/logo-en-maior.png"/>
-    <meta name="description" content="Prepship Tool. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
-    <meta property="og:title" content="Prepship Tool"/>
-    <meta property="og:site_name" content="Prepship Tool"/>
-    <meta property="og:description" content="Prepship Tool. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
+    <meta name="description" content="VOI Services. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
+    <meta property="og:title" content="VOI Services"/>
+    <meta property="og:site_name" content="VOI Services"/>
+    <meta property="og:description" content="VOI Services. We are the only fully automated prep & ship platform. No more sending emails back and forth. No more wait. Our system will notify you all the steps of the shipment creation."/>
     <meta property="og:type" content="website"/>
 
     <!-- Bootstrap Core CSS -->
