ajuste dos links para levar para as páginas em inglês.

--- a/html/www-bbox/en/terms-and-conditions/index.html
+++ b/html/www-bbox/en/terms-and-conditions/index.html
@@ -71,15 +71,15 @@
 
 
                     <li class="active">
-                        <a href="/pt/loja/lista/" class="logo-marca-link operacional-conf"><i class="fa fa-shopping-bag"></i> Store</a>
+                        <a href="/en/store/list/" class="logo-marca-link operacional-conf"><i class="fa fa-shopping-bag"></i> Store</a>
                     </li>
 
                     <li class="">
-                        <a href="/pt/como-funciona" class=""><i class="fa fa-leanpub"></i> How it Works</a>
+                        <a href="/en/how-it-works" class=""><i class="fa fa-leanpub"></i> How it Works</a>
                     </li>
 
                     <li class="">
-                        <a href="/faq" class=""><i class="fa fa-question-circle"></i> FAQ</a>
+                        <a href="/en/faq" class=""><i class="fa fa-question-circle"></i> FAQ</a>
                     </li>
 
                     <li>
@@ -87,12 +87,12 @@
                     </li>
 
                     <li class="tutorial">
-                        <a href="/pt/ajuda/voi-services-da-compra-ao-envio-para-amazon.pdf" target="_blank" class="abre-tutorial"><i class="fa fa-leanpub"></i> Tutorial Plataform</a>
+                        <a href="/en/help/voi-services-da-compra-ao-envio-para-amazon.pdf" target="_blank" class="abre-tutorial"><i class="fa fa-leanpub"></i> Tutorial Plataform</a>
                     </li>
 
 
                     <li>
-                        <a title="Login" href="/pt/entrar"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
+                        <a title="Login" href="/en/login"><strong><i class="fa fa-sign-in"></i></strong> Log in</a>
                     </li>
 
 
