--- a/html/www-bbox/en/terms-and-conditions/index.html
+++ b/html/www-bbox/en/terms-and-conditions/index.html
@@ -201,7 +201,7 @@
                 <div class="col-md-2">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href="/en/terms-and-conditions">Terms and conditions</a>
+                            <a href="/en/terms-and-conditions">Terms of use</a>
                             <!--<a href="/pt/ajuda">Ajuda</a>-->
                         </li>
                     </ul>
