--- a/html/www-bbox/en/terms-of-use/index.html
+++ b/html/www-bbox/en/terms-of-use/index.html
@@ -77,13 +77,13 @@
                     <li class="">
                         <a href="/en/how-it-works" class=""><i class="fa fa-leanpub"></i> How it Works</a>
                     </li>
-
+<!--
                     <li class="">
                         <a href="/en/faq" class=""><i class="fa fa-question-circle"></i> FAQ</a>
                     </li>
-
+-->
                     <li>
-                        <a href="javascript: void(0);" id="contato-popup-link"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+                        <a href="javascript: void(0);" id="contato-popup-link"><i class="fa fa-fw fa-envelope"></i> Contact us</a>
                     </li>
 
                     <li class="tutorial">
@@ -209,6 +209,23 @@
             </div>
         </div>
     </footer>
+
+    <div id="contato-modal" class="modal fade modal-m">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Contact us</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Send us an email to <a class="download" href="mailto:support@voiservices.com">support@voiservices.com</a>.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- jQuery -->
     <script src="../../static/externo/jquery/jquery.min.js"></script>
